Fixed showing empty widgets to page editors
The groups widget used to be visible to editors of a page even when no groups were associated with that page.

Now, empty widgets are hidden by default with a “hidden” class. If the editor adds something to that widget to make it not empty anymore, the “hidden” class is removed so that it’s still visible when the user clicks the save button.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3497,6 +3497,22 @@ p {
   transition: color 0.3s;
 }
 
+.widget.hidden {
+  display: none;
+}
+
+.editing .widget.hidden {
+  display: initial;
+}
+
+.widget form {
+  display: none;
+}
+
+.editing .widget form {
+  display: initial;
+}
+
 /*
 #form-author-add > div > div {
     margin: 0;
